modify application server structure

--- a/SourceCode/ProjSRC/views/layout.jade
+++ b/SourceCode/ProjSRC/views/layout.jade
@@ -1,9 +1,8 @@
+
 html
     head
-        title="Form"
+        title="Calgary Emergency"
         link(rel='stylesheet', type='text/css', href='/extjs4/resources/css/ext-all.css')
         script(type='text/javascript', src='/extjs4/ext-all-debug.js')
         script(type='text/javascript', src='/extjs4/ext-all.js')
-
-        script(type='text/javascript', src='/gui/mainWindow/appForm.js')
-    body
+    body!= body
