partially complete memo display, it could dynamically generate tab

--- a/ProjSRC/views/layout.jade
+++ b/ProjSRC/views/layout.jade
@@ -3,6 +3,7 @@ html
     head
         title="Calgary Emergency"
         link(rel='stylesheet', type='text/css', href='/extjs4/resources/css/ext-all.css')
+        link(rel='stylesheet', type='text/css', href='/extjs4/resources/css/Feed-Viewer.css')
         script(type='text/javascript', src='/extjs4/ext-all-debug.js')
         script(type='text/javascript', src='/extjs4/ext-all.js')
     body!= body
