--- a/ProjSRC/views/index.jade
+++ b/ProjSRC/views/index.jade
@@ -1,2 +1,3 @@
-
-script(type='text/javascript', src='/gui/index/app.js')
+extends layout
+block content
+  script(type='text/javascript', src='/gui/index/app.js')
