--- a/ProjSRC/views/layout.jade
+++ b/ProjSRC/views/layout.jade
@@ -1,4 +1,4 @@
-
+doctype 5
 html
     head
         title="Calgary Emergency"
@@ -6,4 +6,5 @@ html
         link(rel='stylesheet', type='text/css', href='/extjs4/resources/css/Feed-Viewer.css')
         script(type='text/javascript', src='/extjs4/ext-all-debug.js')
         script(type='text/javascript', src='/extjs4/ext-all.js')
-    body!= body
+    body
+        block content
