--- a/ProjSRC/views/main.jade
+++ b/ProjSRC/views/main.jade
@@ -1,2 +1,3 @@
-
-script(type='text/javascript', src='/gui/mainWindow/app.js')
+extends layout
+block content
+  script(type='text/javascript', src='/gui/mainWindow/app.js')
