--- a/ProjSRC/views/users.jade
+++ b/ProjSRC/views/users.jade
@@ -1,1 +1,3 @@
-script(type='text/javascript', src='/gui/sampleGrid/app.js')
+extends layout
+block content
+  script(type='text/javascript', src='/gui/sampleGrid/app.js')
